dev/test_programs/VALID/group3/switch.go
package main

func main() {
	// Here's a basic `switch`.
	i := 2
	print("write ", i, " as ")
	switch i {
	case 1:
		println("one")
	case 2:
		println("two")
	case 3:
		println("three")
	}
}
