dev/test_programs/INVALID/group12/scan_parse_errors/var_decl_error.go
// Short variable declarations may appear only inside functions. 

package main

s := ""

func main() {
	print(s)
}